--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,9 @@
 [submodule "deps/pico-openxr"]
 	path = deps/pico-openxr
 	url = https://github.com/lovr-org/pico_openxr_sdk
+[submodule "plugins/lua-https"]
+	path = plugins/lua-https
+	url = git@github.com:love2d/lua-https.git
+[submodule "plugins/lua-cjson"]
+	path = plugins/lua-cjson
+	url = git@github.com:bjornbytes/lua-cjson.git
