--- a/etc/AndroidManifest.xml
+++ b/etc/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="org.lovr.app" android:installLocation="auto" android:versionCode="1">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="org.lovr.custom" android:installLocation="auto" android:versionCode="1">
   <uses-sdk android:minSdkVersion="23" android:targetSdkVersion="26"/>
   <uses-feature android:name="android.hardware.vr.headtracking" android:required="false"/>
   <uses-feature android:name="oculus.software.handtracking" android:required="false"/>
